<resources>
    <string name="app_name" translatable="false">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_color">Background color</string>
    <string name="pref_icon">Symbol</string>
    <string name="pref_text_size">Text size</string>
    <string name="pref_ai_difficulty">AI Difficulty</string>
    <string name="pref_reset_high_score">Reset high score</string>

    <string-array name="pref_difficulty_list_titles">
        <item>Just out of bed</item>
        <item>Awake</item>
        <item>Awake and had breakfast</item>
    </string-array>
    <string-array name="pref_difficulty_list_values">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_text_size_list_titles">
        <item>Daniel</item>
        <item>Bas</item>
        <item>Wessel</item>
    </string-array>
    <string-array name="pref_text_size_list_values">
        <item>40</item>
        <item>60</item>
        <item>80</item>
    </string-array>

    <string-array name="pref_text_colour_list_titles">
        <item>Black</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    <string-array name="pref_text_colour_list_values">
        <item>black</item>
        <item>yellow</item>
        <item>red</item>
    </string-array>

    <string-array name="pref_icon_list_titles">
        <item>X</item>
        <item>O</item>
    </string-array>
    <string-array name="pref_icon_list_values">
        <item>X</item>
        <item>O</item>
    </string-array>

    <string name="pref_theme">Theme</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="o" translatable="false">O</string>
    <string name="x" translatable="false">X</string>
    <string name="games_played">Games played: %s</string>
    <string name="game_won">You win</string>
    <string name="game_lost">You lose</string>
    <string name="stalemate">Stalemate</string>
    <string name="player_o">You are O</string>
    <string name="player_x">You are X</string>
    <string name="pref_text_colour">Text colour</string>
</resources>
